# AI-Trading-Copilot

./: .eslintrc.cjs  .gitignore  README.md  TRADING EXT.txt  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: websocket.py
backend/app/api/routes/: analysis.py  auth.py  chat.py  journal.py  market.py  trade.py
backend/app/core/: security.py
backend/app/engines/: ai_engine.py  chart_engine.py  market_engine.py  option_chain_engine.py  smc_engine.py  trade_engine.py
backend/tests/: conftest.py  test_api.py  test_chart_engine.py  test_market_engine.py  test_nim.py  test_nim_http.py  test_option_chain_engine.py  test_smc_engine.py
extension/: package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
extension/src/: manifest.json
extension/src/background/: alarm-manager.ts  api-client.ts  index.ts  message-handler.ts
extension/src/content/: index.ts  kite-observer.ts  sidebar-injector.ts
extension/src/content/styles/: sidebar.css
extension/src/offscreen/: index.html  worker.ts
extension/src/options/: Options.tsx  index.html  index.tsx  options.css
extension/src/popup/: Popup.tsx  index.html  index.tsx  popup.css
extension/src/shared/constants/: config.ts  weights.ts
extension/src/shared/types/: chart.ts  index.ts  market.ts  messages.ts  option-chain.ts  smc.ts  (+1 more)
extension/src/sidebar/: App.tsx  index.html  index.tsx
(+17 files in other folders)
